refactor(api): Generate uuid.UUID in api package
